ProjPesoIdeal/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\Renan\Desktop\Projetos\ProjPesoIdeal
-d
C:\Users\Renan\Desktop\Projetos\ProjPesoIdeal\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\Renan\Desktop\Projetos\ProjPesoIdeal\Peso.java
<---- end of javadoc command ---->
Loading source file C:\Users\Renan\Desktop\Projetos\ProjPesoIdeal\Peso.java...
C:\Users\Renan\Desktop\Projetos\ProjPesoIdeal\Peso.java:56: error: reached end of file while parsing
    public abstract String imc();
                                 ^
1 error
